updated chart styles

--- a/ldsn-scorecard/css/main.css
+++ b/ldsn-scorecard/css/main.css
@@ -1,4 +1,9 @@
-
+.ct-chart .ct-bar {
+  stroke-width: 20px;
+}
+.ct-chart .ct-label.ct-horizontal {
+  text-align: center;
+}
 
 .height-control
 {
