--- a/bpcs-v3/assets/css/style.css
+++ b/bpcs-v3/assets/css/style.css
@@ -29,6 +29,11 @@
     font-weight: 100;
 }
 
+.row-space
+{
+    margin-bottom: 60px;
+}
+
 
 /*================================
     GENERAL STYLES
