--- a/bpcs-v3/assets/css/style.css
+++ b/bpcs-v3/assets/css/style.css
@@ -195,7 +195,7 @@ section {
     NAVBAR STYLES
 ==================================*/
 .navbar-default {
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
     border-color: transparent;
     color: #fff;
 }
