--- a/bpcs-v3/assets/css/style.css
+++ b/bpcs-v3/assets/css/style.css
@@ -221,7 +221,7 @@ section {
 
 /*STYLE OF BACKGROUND IMAGE*/
 #home {
-    background: url(http://weareclutch.com/wp-content/themes/Clutch/_ui/img/heroes/home-desktop.jpg) no-repeat center center; /*Full Witdth background image*/
+    background: url(http://gnakan.github.io/bpcs-v2/img/alone.jpeg) no-repeat center center; /*Full Witdth background image*/
     padding: 0;
     -webkit-background-size: cover;
     background-size: cover;
