--- a/bpcs-v3/assets/css/style.css
+++ b/bpcs-v3/assets/css/style.css
@@ -231,7 +231,7 @@ section {
     /*STYLE FOR OVERLAY CLASS - WHICH IS ABOVE IMAGE WITH OPACITY/TRANSPARENCY 0.75*/
     #home .overlay {
         padding-top: 90px;
-        background-color: rgba(0, 0, 0,0.5); /*.75 opacity of the color so that background image is visible*/
+        /*background-color: rgba(0, 0, 0,0.5); /*.75 opacity of the color so that background image is visible*/
         min-height: 600px;
         color: #fff;
     }
