--- a/bpcs-v3/assets/css/style.css
+++ b/bpcs-v3/assets/css/style.css
@@ -14,6 +14,12 @@
    
 ========================================================  */
 
+.navbar-brand .img-responsive
+{
+    height: 40px;
+    margin-top: 5px;
+}
+
 .sticky-wrapper ul
 {
       list-style: none;
