--- a/bpcs-v3/assets/css/style.css
+++ b/bpcs-v3/assets/css/style.css
@@ -128,7 +128,9 @@
     height: 250px;
     width: 48.5%;
     margin: 5px;
+    cursor: pointer;
 }
+
 
 .case-study img {
     position: absolute;
@@ -208,8 +210,8 @@ section {
 ==================================*/
 /*STYLE OF BACKGROUND IMAGE*/
 
-#home {
-    background: url(http://gnakan.github.io/bpcs-v2/img/alone.jpeg) no-repeat center center;
+#solutions {
+    background: url(../img/one_home.jpeg) no-repeat center center;
     /*Full Witdth background image*/
     
     padding: 0;
@@ -228,11 +230,10 @@ section {
     color: #fff;
 }
 
-#home h1 {
+#home h1, #solutions h1 {
     padding-top: 80px;
     font-weight: 900;
     font-size: 100px;
-    font-family: 'Browallia New';
 }
 /*SMPLE CLASS TO ADJUST SECTION PADDING & HEIGHT*/
 /*CLASS TO FORMAT TEXT*/
