--- a/bpcs-v3/assets/css/style.css
+++ b/bpcs-v3/assets/css/style.css
@@ -41,7 +41,8 @@
 }
 
 .subnav a {
-    color: white;
+    color: gray;
+  letter-spacing: 2px;
 }
 
 .sticky-wrapper ul li {
@@ -113,6 +114,10 @@
     background-color: white;
     color: #333;
     padding-top: 20px;
+}
+
+.container-alt footer{
+    background-color: white;
 }
 
 .container-alt h2,
@@ -220,6 +225,17 @@ section {
     -moz-background-size: cover;
     min-height: 600px;
 }
+
+#team {
+    background: url(../img/team.jpg) no-repeat center center;
+    /*Full Witdth background image*/
+    
+    padding: 0;
+    -webkit-background-size: cover;
+    background-size: cover;
+    -moz-background-size: cover;
+    min-height: 600px;
+}
 /*STYLE FOR OVERLAY CLASS - WHICH IS ABOVE IMAGE WITH OPACITY/TRANSPARENCY 0.75*/
 
 #home .overlay {
@@ -230,7 +246,7 @@ section {
     color: #fff;
 }
 
-#home h1, #solutions h1 {
+#home h1, #solutions h1, #team h1 {
     padding-top: 80px;
     font-weight: 900;
     font-size: 100px;
