--- a/bpcs-v3/assets/css/style.css
+++ b/bpcs-v3/assets/css/style.css
@@ -13,6 +13,27 @@
    
 ========================================================  */
 
+.team-box p
+{
+    letter-spacing: 1px;
+    font-size: .8em;
+    color: #0f0f0f;
+}
+
+
+.team-title
+{
+    background-color: #73a2c7;
+    position: absolute;
+    top: 198px;
+    color:white;
+    font-weight: 100;
+    padding: 2px 10px 2px 10px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: .9em;
+}
+
 .navbar-brand .img-responsive {
     height: 40px;
     margin-top: 5px;
