--- a/bpcs-v3/assets/css/style.css
+++ b/bpcs-v3/assets/css/style.css
@@ -20,6 +20,14 @@
     color: #0f0f0f;
 }
 
+.team-box h3
+{
+    font-size: 1em;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
 
 .team-title
 {
