--- a/bpcs-v3/assets/css/style.css
+++ b/bpcs-v3/assets/css/style.css
@@ -13,6 +13,12 @@
    
 ========================================================  */
 
+#locations
+{
+    padding: 0;
+    margin: 0;
+}
+
 .team-box p
 {
     letter-spacing: 1px;
