--- a/bpcs-v3/assets/css/style.css
+++ b/bpcs-v3/assets/css/style.css
@@ -13,6 +13,19 @@
    
 ========================================================  */
 
+.site-footer
+{
+    background-color: #333;
+    overflow: hidden;
+    font-size: .9em;
+    color: gray;
+}
+
+.site-footer a, .site-footer a:visited, .site-footer a:active
+{
+    color: gray;
+}
+
 .site-footer p
 {
     font-weight: 100;
@@ -21,21 +34,40 @@
     text-align: left;
 }
 
-.mine
+.footer-block
 {
-    list-style: none;
+    text-align: left;
+    font-weight: 100;
 }
 
-.mine li
+.footer-block h3
 {
     margin: 0;
     padding: 0;
+    
+    letter-spacing: 2px;
+    font-size: 1.3em;
+    margin-bottom: 10px;
+}
+
+.footer-block ul
+{
+    list-style: none;
+    margin: 0;
+    padding:0;
+}
+
+.footer-block ul li
+{
+    margin: 0;
+    padding: 5px 0px 5px 0px;
     text-align: left;
+
 }
 
 .mine i
 {
-    margin-right: 10px;
+    margin-right: 2px;
 }
 
 #locations
