--- a/bpcs-v3/assets/css/style.css
+++ b/bpcs-v3/assets/css/style.css
@@ -235,12 +235,18 @@ form .btn
 {
     font-weight: 100;
     letter-spacing: 2px;
-    background-color: inherit;
+    background-color: rgba(255, 255, 255, 0.0);
     border: 2px solid white;
     border-radius: 20px;
     padding-top: 20px;
     padding-bottom: 20px;
     font-size: 1.4em;
+}
+
+
+.btn-callToAction:hover
+{
+    color: white;
 }
 
 .container-alt-gray {
