--- a/bpcs-v3/assets/css/style.css
+++ b/bpcs-v3/assets/css/style.css
@@ -13,6 +13,15 @@
    
 ========================================================  */
 
+.social-overlay
+{
+    color: white;
+    left: 35%;
+  top: 30px;
+  position: absolute;
+}
+
+
 .site-footer
 {
     background-color: #333;
