--- a/bpcs-v3/assets/css/style.css
+++ b/bpcs-v3/assets/css/style.css
@@ -94,7 +94,7 @@ form .btn
 {
         font-weight: 100;
     letter-spacing: 2px;
-    background-color: inherit;
+    background-color: rgba(255, 255, 255, 0.0);;
     border: 2px solid #73a2c7;
     border-radius: 20px;
     padding-top: 20px;
