--- a/bpcs-v3/assets/css/style.css
+++ b/bpcs-v3/assets/css/style.css
@@ -13,6 +13,25 @@
    
 ========================================================  */
 
+.read-more-btn
+{
+    width: 100%;
+    bottom: 50px;
+    position: absolute;
+    outline: none;
+}
+
+
+
+
+
+
+.read-more
+{
+    display:none;
+}
+
+
 .social-overlay
 {
     color: white;
@@ -92,7 +111,7 @@
 
 form .btn
 {
-        font-weight: 100;
+    font-weight: 100;
     letter-spacing: 2px;
     background-color: rgba(255, 255, 255, 0.0);;
     border: 2px solid #73a2c7;
@@ -113,19 +132,75 @@ form .btn
     padding: 0;
 }
 
+.team-box
+{
+    margin: .5%;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    background-color: white;
+    padding: 10px 0px 100px 0px;
+    min-height: 440px;
+    position: relative;
+
+}
+
+.team-box .text-content
+{
+    overflow: hidden;
+    width: 100%;
+    padding-top: 5px;
+}
+
+.team-box .links
+{
+    background-color: #eee;
+    border-top: 1px solid #ccc;
+    bottom: 0px;
+    padding: 5px;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    height: 50px;
+}
+
+.team-box .links ul
+{
+    list-style: none;
+    padding: 0;
+    height: 50px;
+
+}
+
+.team-box .links ul li
+{
+    display: inline-block;
+    margin-top: 5px;
+
+}
+
 .team-box p
 {
     letter-spacing: 1px;
-    font-size: .8em;
-    color: #0f0f0f;
+    font-size: .9em;
+    color: #888;
+    line-height: 1.3em;
+    font-weight: 100;
+    padding: 0px 10px 0px 10px;
 }
 
 .team-box h3
 {
-    font-size: 1em;
+    font-size: 20px;
     letter-spacing: 1px;
     text-transform: uppercase;
-    font-weight: 500;
+    font-weight: 900;
+    margin: 0px;
+}
+
+.team-box h4
+{
+    font-weight: 100;
+    color: #666;
+    margin: 0;
 }
 
 
