--- a/aptus-site/css/main.css
+++ b/aptus-site/css/main.css
@@ -2,6 +2,7 @@
 	General Style
 --------------------------------------------------------------------------*/
 
+
 .homepage-hero
 {
   background-image: url(../img/homepage-slider/1.jpeg);
@@ -10,7 +11,7 @@
   background-size: cover;
   background-position: 0px -200px;
   overflow: hidden;
-
+  position: relative;
 }
 
 .homepage-hero .cover
@@ -20,8 +21,8 @@
   position: absolute;
   padding-top: 30px;
   padding-bottom: 30px;
-  bottom: 134px;
   width: 100%;
+  bottom: 0px;
 }
 
 .homepage-hero .cover h3
@@ -106,9 +107,11 @@ div[class*="span"] {
 --------------------------------------------------------------------------*/
 body {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  line-height: 20px;
+  font-size: 1.6em;
+  line-height: 1.8em;
   color: #535b60;
+  letter-spacing: .5px;
+  font-weight: 100;
 }
 h1 {
   color: #53555c;
