--- a/aptus-site/css/main.css
+++ b/aptus-site/css/main.css
@@ -1,7 +1,10 @@
 /*--------------------------------------------------------------------------
 	General Style
 --------------------------------------------------------------------------*/
-
+.sales-copy
+{
+  display: none;
+}
 
 .homepage-hero
 {
