--- a/bpcs-v3/assets/css/style.css
+++ b/bpcs-v3/assets/css/style.css
@@ -13,107 +13,113 @@
    
 ========================================================  */
 
-.read-more-btn
-{
+.read-more-btn {
     width: 100%;
     bottom: 50px;
     position: absolute;
     outline: none;
 }
 
-
-
-
-
-
-.read-more
-{
-    display:none;
+#leadership .row {
+    margin-bottom: 30px;
 }
 
+.team-box:hover {
+    transform: scale(1.1);
+}
 
-.social-overlay
+.sticky-wrapper li:hover {
+    color: white;
+    transform: scale(1.1);
+    text-decoration: none;
+    font-weight: bold;
+    background-color: #f8f8f8;
+}
+
+.sticky-wrapper a:hover, .sticky-wrapper a:visited, .sticky-wrapper a:active
 {
+    text-decoration: none;
+}
+
+.sticky-wrapper li
+{
+    transition: all .2s ease-in-out;
+}
+
+.read-more {
+    display: none;
+}
+
+.social-overlay {
     color: white;
     left: 35%;
-  top: 30px;
-  position: absolute;
+    top: 30px;
+    position: absolute;
 }
 
-
-.site-footer
-{
+.site-footer {
     background-color: #333;
     overflow: hidden;
     font-size: .9em;
     color: gray;
 }
 
-.site-footer a, .site-footer a:visited, .site-footer a:active
-{
+.site-footer a,
+.site-footer a:visited,
+.site-footer a:active {
     color: gray;
 }
 
-.site-footer p
-{
+.site-footer p {
     font-weight: 100;
     letter-spacing: 1px;
     font-size: .8em;
     text-align: left;
 }
 
-.footer-block
-{
+.footer-block {
     text-align: left;
     font-weight: 100;
 }
 
-.footer-block h3
-{
+.footer-block h3 {
     margin: 0;
     padding: 0;
-    
     letter-spacing: 2px;
     font-size: 1.3em;
     margin-bottom: 10px;
 }
 
-.footer-block ul
-{
+.footer-block ul {
     list-style: none;
     margin: 0;
-    padding:0;
+    padding: 0;
 }
 
-.footer-block ul li
-{
+.footer-block ul li {
     margin: 0;
     padding: 5px 0px 5px 0px;
     text-align: left;
-
 }
 
-.mine i
-{
+.mine i {
     margin-right: 2px;
 }
 
-#locations
-{
+#locations {
     padding: 0;
     margin: 0;
 }
 
-.form-control
-{
+.form-control {
     border-color: #F8F8F4;
 }
 
-form .btn
-{
+form .btn {
     font-weight: 100;
     letter-spacing: 2px;
-    background-color: rgba(255, 255, 255, 0.0);;
+    background-color: rgba(255, 255, 255, 0.0);
+    ;
     border: 2px solid #73a2c7;
     border-radius: 20px;
     padding-top: 20px;
@@ -122,8 +128,7 @@ form .btn
     color: #73a2c7;
 }
 
-.accent-heading
-{
+.accent-heading {
     font-weight: 100;
     color: #73a2c7;
     letter-spacing: 1px !important;
@@ -132,26 +137,24 @@ form .btn
     padding: 0;
 }
 
-.team-box
-{
+.team-box {
     margin: .5%;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     background-color: white;
     padding: 10px 0px 100px 0px;
     min-height: 440px;
     position: relative;
-
+    transition: all .2s ease-in-out;
+    cursor: pointer;
 }
 
-.team-box .text-content
-{
+.team-box .text-content {
     overflow: hidden;
     width: 100%;
     padding-top: 5px;
 }
 
-.team-box .links
-{
+.team-box .links {
     background-color: #eee;
     border-top: 1px solid #ccc;
     bottom: 0px;
@@ -162,23 +165,18 @@ form .btn
     height: 50px;
 }
 
-.team-box .links ul
-{
+.team-box .links ul {
     list-style: none;
     padding: 0;
     height: 50px;
-
 }
 
-.team-box .links ul li
-{
+.team-box .links ul li {
     display: inline-block;
     margin-top: 5px;
-
 }
 
-.team-box p
-{
+.team-box p {
     letter-spacing: 1px;
     font-size: .9em;
     color: #888;
@@ -187,8 +185,7 @@ form .btn
     padding: 0px 10px 0px 10px;
 }
 
-.team-box h3
-{
+.team-box h3 {
     font-size: 20px;
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -196,20 +193,17 @@ form .btn
     margin: 0px;
 }
 
-.team-box h4
-{
+.team-box h4 {
     font-weight: 100;
     color: #666;
     margin: 0;
 }
 
-
-.team-title
-{
+.team-title {
     background-color: #73a2c7;
     position: absolute;
     top: 198px;
-    color:white;
+    color: white;
     font-weight: 100;
     padding: 2px 10px 2px 10px;
     text-transform: uppercase;
@@ -246,7 +240,7 @@ form .btn
 
 .subnav a {
     color: gray;
-  letter-spacing: 2px;
+    letter-spacing: 2px;
 }
 
 .sticky-wrapper ul li {
@@ -308,15 +302,14 @@ form .btn
     background-color: #73a2c7;
 }
 
-.container-alt-accent h1
-{
+.container-alt-accent h1 {
     font-weight: 100;
     letter-spacing: 2px;
     margin-bottom: 40px;
 }
 
-.container-alt-accent button, .btn-callToAction
-{
+.container-alt-accent button,
+.btn-callToAction {
     font-weight: 100;
     letter-spacing: 2px;
     background-color: rgba(255, 255, 255, 0.0);
@@ -327,9 +320,7 @@ form .btn
     font-size: 1.4em;
 }
 
-
-.btn-callToAction:hover
-{
+.btn-callToAction:hover {
     color: white;
 }
 
@@ -345,7 +336,7 @@ form .btn
     padding-top: 20px;
 }
 
-.container-alt footer{
+.container-alt footer {
     background-color: white;
 }
 
@@ -364,7 +355,6 @@ form .btn
     margin: 5px;
     cursor: pointer;
 }
-
 
 .case-study img {
     position: absolute;
@@ -498,7 +488,10 @@ section {
     color: #fff;
 }
 
-#home h1, #solutions h1, #team h1, #connect h1 {
+#home h1,
+#solutions h1,
+#team h1,
+#connect h1 {
     padding-top: 80px;
     font-weight: 100;
     font-size: 100px;
