--- a/aptus-site/css/main.css
+++ b/aptus-site/css/main.css
@@ -1,6 +1,19 @@
 /*--------------------------------------------------------------------------
 	General Style
 --------------------------------------------------------------------------*/
+.card1
+{
+  background-color: rgba(0,0,0,0.1);
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.card1 h3
+{
+  font-size: 1.2em;
+}
+
+
 .sales-copy
 {
   display: none;
