--- a/aptus-site/css/main.css
+++ b/aptus-site/css/main.css
@@ -1,12 +1,36 @@
 /*--------------------------------------------------------------------------
 	General Style
 --------------------------------------------------------------------------*/
+.read-more
+{
+  display:none;
+  padding-bottom: 100px;
+}
+
+.read-more-btn {
+    bottom: 20px;
+    position: absolute;
+    outline: none;
+}
+
 .card1
 {
   background-color: rgba(0,0,0,0.1);
   border-radius: 5px;
   padding: 10px;
+  min-height: 300px;
+  line-height: 1.3em;
+  transition: all .2s ease-in-out;
+  z-index: 100;
 }
+
+.card1:hover {
+    transform: scale(1.1);
+    background-color: white;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+
 
 .card1 h3
 {
