--- a/register/main.css
+++ b/register/main.css
@@ -29,3 +29,32 @@
 	font-size: 1.3em;
 	font-weight: 100;
 }
+
+.page-quote
+{
+	padding: 30px;
+
+}
+
+.margin50
+{
+	margin-top: 50px;
+}
+
+.bg-alt
+{
+	background-color: #f9f7f6;
+	padding: 50px 0px 50px 0px;
+}
+
+.feature-img
+{
+	height: 400px;
+}
+
+.feature-img h4
+{
+	bottom: 0px;
+	position: absolute;
+	width: 100%;
+}
