--- a/bpcs-v4/assets/css/style.css
+++ b/bpcs-v4/assets/css/style.css
@@ -13,6 +13,12 @@
    
 ========================================================  */
 
+.btn-view
+{
+    padding-top: 30px;
+    font-size: 1.3em;
+}
+
 a:hover
 {
     text-decoration: none;
