--- a/bpcs-v4/assets/css/style.css
+++ b/bpcs-v4/assets/css/style.css
@@ -23,7 +23,7 @@
     float: left;
     width: 200px;
     height: 50px;
-    margin: 10px;
+    margin: 20px 10px;
     text-align: center;
     line-height: 40px;
 
@@ -679,7 +679,7 @@ section {
 }
 
 #clients img {
-    opacity: 0.5;
+    opacity: 0.8;
     cursor: pointer;
 }
 
