--- a/bpcs-v4/assets/css/style.css
+++ b/bpcs-v4/assets/css/style.css
@@ -1,4 +1,14 @@
-﻿.blog-post-meta
+﻿@media screen and (max-width: 767px)
+{
+    .navbar-collapse
+    {
+        background-color: rgba(0,0,0, 0.8);
+    }
+}
+
+
+
+.blog-post-meta
 {
     color: #999;
 }
@@ -646,7 +656,7 @@ section {
 #connect h1 {
     padding-top: 80px;
     font-weight: 100;
-    font-size: 100px;
+    font-size: 7em;
     letter-spacing: 2px;
 }
 /*SMPLE CLASS TO ADJUST SECTION PADDING & HEIGHT*/
