--- a/bpcs-v4/assets/css/style.css
+++ b/bpcs-v4/assets/css/style.css
@@ -4,6 +4,12 @@
     {
         background-color: rgba(0,0,0, 0.8);
     }
+
+    #home h1
+    {
+        font-size: 4em !important;
+    }
+
 }
 
 
