--- a/bpcs-v4/assets/css/style.css
+++ b/bpcs-v4/assets/css/style.css
@@ -574,6 +574,7 @@ section {
 ==================================*/
 
 .navbar-default {
+    background: rgb(0,0,0)
     background-color: rgba(0, 0, 0, 0);
     border-color: transparent;
     color: #fff;
