--- a/bpcs-v4/assets/css/style.css
+++ b/bpcs-v4/assets/css/style.css
@@ -120,7 +120,7 @@
 .share-link-show
 {
     background-color: rgba(0,0,0,0.05);
-    width: 600px;
+    width: 700px;
     border-radius: 5px;
 }
 
@@ -502,19 +502,22 @@ form .btn {
 .case-study:hover
 {
     background-color: #73a2c7;
-    height: 275px;
 }
 
 
 .case-study {
     overflow: hidden;
-    width: 48.5%;
-    margin: 5px;
     cursor: pointer;
     transition: all .2s ease-in-out;
     background-color: #212121;
-    height: 150px;
     border-radius: 5px;
+    padding: 20px;
+    margin: 10px;
+}
+
+.case-study p
+{
+    font-weight: 100;
 }
 
 
@@ -528,8 +531,10 @@ form .btn {
 .case-study h3 {
     position: relative;
     color: white;
-    font-size: 2.5em;
+    font-size: 2em;
     line-height: 1.2;
+    margin: 0;
+    padding: 0;
 }
 
 .case-study h4 {
