--- a/bpcs-v4/assets/css/style.css
+++ b/bpcs-v4/assets/css/style.css
@@ -24,7 +24,7 @@
     margin-top: 50px;
 }
 
-#locations {
+#map {
     display: none;
 }
 
@@ -278,7 +278,7 @@ form .btn {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     background-color: white;
     padding: 10px 0px 100px 0px;
-    min-height: 400px;
+    min-height: 420px;
     position: relative;
     transition: all .2s ease-in-out;
     cursor: pointer;
