--- a/bpcs-v4/assets/css/style.css
+++ b/bpcs-v4/assets/css/style.css
@@ -3,9 +3,32 @@
     padding: 0px !important;
 }
 
+.vid-container
+{
+    position: absolute;
+    background-color: rgba(0,0,0,0.5);
+     -webkit-background-size: cover;
+    background-size: cover;
+    -moz-background-size: cover;
+    width: 100%;
+    height: 100vh;
+    overflow:hidden;
+}
+
+.vid-overlay
+{
+    background-color: rgba(0,0,0,0.8);
+     -webkit-background-size: cover;
+    background-size: cover;
+    -moz-background-size: cover;
+    height: 100vh;
+    overflow:hidden;
+    position: absolute;
+}
+
 video#bgvid {
 width: 100%;
-opacity: 0;
+opacity: 1;
 background-size: cover;
 z-index: 100;
 transition: 1s opacity;
@@ -620,11 +643,11 @@ section {
 
 #teamCulture
 {
-    background: url(../img/culture_team.jpg) no-repeat center center;
+    /*background: url(../img/culture_team.jpg) no-repeat center center;
     padding: 0;
     -webkit-background-size: cover;
     background-size: cover;
-    -moz-background-size: cover;
+    -moz-background-size: cover;*/
     height: 100vh;
     overflow:hidden;
 }
