--- a/bpcs-v4/assets/css/style.css
+++ b/bpcs-v4/assets/css/style.css
@@ -431,7 +431,7 @@ form .btn {
 
 .sticky-wrapper ul li {
     text-align: center;
-    width: 20%;
+    width: 32%;
     display: inline-block;
     min-width: 80px;
     overflow: hidden;
@@ -598,6 +598,7 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: black;
     color: white;
+    min-width: 350px;
 }
 
 section {
