--- a/hancock/main.css
+++ b/hancock/main.css
@@ -1,20 +1,19 @@
+table
+{
+	border: 1px solid gray;
+}
+
 .bpcs_signature
 {
 	width: 250px;
 	font-family: sans-serif;
 	font-weight: 100;
 	color: #444;
-	font-size: .6em;
 	overflow: hidden;
 	position: relative;
 	letter-spacing: .8px;
-}
-
-.split
-{
-	width: 45%;
-	float: left;
-	overflow: hidden;
+	height: 93px;
+	border: none;
 }
 
 h1
@@ -23,6 +22,7 @@ h1
 	margin: 0;
 	padding: 0;
 	font-weight: 100;
+
 }
 
 h2
@@ -32,6 +32,7 @@ h2
 	padding: 0;
 	font-weight: 100;
 	text-transform: capitalize;
+	margin-top: -5px;
 }
 
 .logo
@@ -83,13 +84,14 @@ li i
 
 }
 
-.contact li
+.contact
 {
 	padding-left: 2px;
 	line-height: 15px;
 	height: 15px;
 	text-transform: lowercase;
 	margin-bottom: 2px;
+	font-size: .7em;
 }
 
 .contact img
@@ -102,8 +104,7 @@ li i
 
 .social
 {
-	position: absolute;
-	bottom: 0px;
+	margin-top: 10px;
 }
 
 .social li
@@ -119,4 +120,14 @@ li i
 	background: url('bpcs_icons.png') no-repeat -303px -2px;
 	width: 117px;
 	height: 95px;
+}
+
+tr
+{
+	padding: 0px;
+}
+
+td
+{
+	padding: 0px;
 }
