--- a/aptus-site/css/greenhouse.css
+++ b/aptus-site/css/greenhouse.css
@@ -8,3 +8,13 @@
 	max-width: 100%;
 	padding: 0px !important;
 }
+
+p
+{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.2em;
+    line-height: 1.8em;
+    color: #535b60;
+    letter-spacing: .5px;
+    font-weight: 100;
+}
