--- a/aptus-site/css/greenhouse.css
+++ b/aptus-site/css/greenhouse.css
@@ -18,3 +18,14 @@ p
     letter-spacing: .5px;
     font-weight: 100;
 }
+
+#board_title
+{
+	color: #53555c;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 2em;
+    border-bottom: 2px solid #53555c;
+    line-height: 1.5em;
+    margin: 30px 0;
+    padding-left: 10px;
+}
