--- a/bpcs-techwrite-dashboard/dashboard.css
+++ b/bpcs-techwrite-dashboard/dashboard.css
@@ -12,15 +12,45 @@ body, table
 	border-radius: 2px;
 }
 
+.pipeline-row .dashboard-widget
+{
+	border: none;
+}
+
 .dashboard-widget-num
 {
 	font-size: 4em;
 	font-weight: 100;
 	margin: 0;
 	padding: 0;
+	height: 90px;
 }
 
-td.red {
+tbody th
+{
+	font-weight: normal;
+	text-align: center;
+}
+
+.dashboard-widget-num-small
+{
+	font-size: 2em;
+	font-weight: 100;
+	margin: 0;
+	padding: 0;
+}
+
+#progress-chart
+{
+	height: 40px;
+}
+
+.table-responsive
+{
+	padding-bottom: 50px;
+}
+
+.red {
   color: red;
 }
 
@@ -29,5 +59,63 @@ td.red {
 }
 
 td.gray{
-	color: #ddd;
+	color: #aaa;
+}
+
+.ct-grids, .ct-labels
+{
+	display:none;
+}
+
+.ct-label
+{
+	font-size:1em;
+}
+
+.pipeline-row
+{
+	height: 240px;
+}
+
+.draft
+{
+	background-color: #207de5;
+	color:white;
+}
+
+.code
+{
+	background-color: #eb6420;
+	color:white;
+}
+
+.edit
+{
+	background-color: #5319e7;
+	color:white;
+}
+
+.test
+{
+	background-color: #fbca04;
+}
+
+.ct-series-a .ct-bar
+{
+	stroke: #207de5;
+}
+
+.ct-series-b .ct-bar
+{
+	stroke: #eb6420;
+}
+
+.ct-series-c .ct-bar
+{
+	stroke: #5319e7;
+}
+
+.ct-series-d .ct-bar
+{
+	stroke: #fbca04;
 }
