--- a/aptus-site/css/main.css
+++ b/aptus-site/css/main.css
@@ -190,7 +190,7 @@ a:hover {
 .service-wrapper {
   background: #FFF;
   margin: 20px 10px;
-  text-align: center;
+  text-align: left;
   padding: 30px 20px;
   -webkit-border-radius: 5px;
   -webkit-background-clip: padding-box;
@@ -202,7 +202,7 @@ a:hover {
   -moz-box-shadow: 0 0 3px #999;
   box-shadow: 0 0 3px #999;
   color: 0 0 3px #999;
-  min-height: 300px;
+  min-height: 400px;
 }
 .service-wrapper h3 {
   font-size: 1.2em;
