--- a/aptus-site/css/main.css
+++ b/aptus-site/css/main.css
@@ -192,15 +192,10 @@ a:hover {
   margin: 20px 10px;
   text-align: left;
   padding: 30px 20px;
-  -webkit-border-radius: 5px;
   -webkit-background-clip: padding-box;
-  -moz-border-radius: 5px;
   -moz-background-clip: padding;
-  border-radius: 5px;
   background-clip: padding-box;
-  -webkit-box-shadow: 0 0 3px #999;
-  -moz-box-shadow: 0 0 3px #999;
-  box-shadow: 0 0 3px #999;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   color: 0 0 3px #999;
   min-height: 400px;
 }
@@ -1609,6 +1604,78 @@ span.color-red {
 /*--------------------------------------------------------------------------
 +	Our Team Style
 --------------------------------------------------------------------------*/
+.team-box {
+    margin: 0px 0px 20px 0px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    background-color: white;
+    padding: 10px 0px 80px 0px;
+    min-height: 600px;
+    position: relative;
+}
+
+.team-box .text-content {
+    overflow: hidden;
+    width: 100%;
+    padding: 5px 10px;
+}
+
+.team-box .links {
+    background-color: #eee;
+    border-top: 1px solid #ccc;
+    bottom: 0px;
+    padding: 5px;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    height: 50px;
+}
+
+.team-box .links ul {
+    list-style: none;
+    padding: 0;
+    height: 50px;
+}
+
+.team-box .links ul li {
+    display: inline-block;
+    margin: 5px 10px 0px 10px;
+}
+
+.team-box p {
+    letter-spacing: 1px;
+    font-size: .9em;
+    font-weight: 100;
+}
+
+.team-box h3 {
+    font-size: 20px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: 900;
+    margin: 0px;
+    padding: 0px 10px;
+}
+
+.team-box h4 {
+    font-weight: 100;
+    color: #666;
+    margin: 0;
+    padding: 0px 10px;
+}
+
+.team-title {
+    background-color: #73a2c7;
+    position: absolute;
+    top: 198px;
+    color: white;
+    font-weight: 100;
+    padding: 2px 10px 2px 10px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: .9em;
+}
+
+
 .team-member {
   position: relative;
   background: #FFF;
